# programming_ws

./: .gitignore  .gitmodules  README.md  command_line_input.sh  computer_networks  notes.md
algorithms/: CMakeLists.txt
algorithms/python/: fibonacci_memoization.py  qr_factorization.py
algorithms/src/: graph_bfs.cpp  graph_dfs.cpp  graph_from_edges.cpp  graph_from_matrix.cpp  graph_minimize_adjacent_diff.cpp  graph_node_level.cpp  longest_common_prefix.cpp  mergable_stack.cpp  monte_carlo_integrator.cpp  prefix_to_infix.cpp  rk4_method.cpp  stack_reverse.cpp  tree_ds.cpp  tree_notes.md
algorithms/src/arrays/: next_permutation.cpp  three_sum_brute_force.cpp
algorithms/src/backtracking/: allocate_chair_to_students.cpp  dfs.py  subsets.cpp  word_search.cpp
algorithms/src/dfs/: binary_tree_inorder_traversal.cpp
algorithms/src/dynamic_programming/: climbing_stairs.cpp  dynamic_programming.md  fibonacci.cpp  house_robber.cpp  matrix_chain_multiplication.cpp  min_climbing_cost.cpp  multistage_graph.cpp  shortest_path.cpp
algorithms/src/gemm/: sparse_matrix_1.cpp  sparse_matrix_2.cpp  sparse_matrix_3.cpp
algorithms/src/graph/: CMakeLists.txt  clone_graph.cpp  connected_components.cpp  course_schedule.cpp  graph_djikstra.cpp  max_area_island.cpp  maze_path_finding.cpp
algorithms/src/heaps/: heap.cpp  priority_queue.cpp
algorithms/src/queue/: queue_using_arrays.cpp  queue_using_linked_list.cpp
algorithms/src/recursion/: min_max.cpp  notes.md  power_number.cpp
algorithms/src/search/: binary_search.cpp
algorithms/src/system_design/: binary_tree_seralization.cpp  flatten_nested_iterator.cpp  median_from_data_stream.cpp  range_sum_query.cpp  range_sum_query_mutable.cpp  sum_region_matrix.cpp  unique_word_abbreviation.cpp  zigzag_iterator.cpp
algorithms/src/trees/: flood_fill.cpp  quadtree.cpp  tree_access.cpp  tree_depth.cpp
algorithms/src/tries/: trie_1.cpp
c++/algorithms/: CMakeLists.txt  algorithms_app.cpp
c++/algorithms/include/: algorithm_base.h  leet_code_function_definitions.h
c++/algorithms/leet-code/: CMakeLists.txt
c++/algorithms/leet-code/include/: leet_code_function_definitions.h
c++/algorithms/leet-code/src/: merge_sorted_lists.cpp  p1_two_sum.cpp  p2_add_two_numbers.cpp  remove_duplicates.cpp  roman_to_num.cpp  subsequence.cpp
c++/algorithms/src/: integer_palindrome.cpp  monte_carlo_integrator.cpp  network_traffic_probability_distribution.cpp  recursion_vs_loop.cpp  valid_paranthesis.cpp
c++/language_concepts/: CMakeLists.txt  NOTES.md  README.md  class_records.cpp  hello_world.cpp  lambda_functions.cpp  pointer_basics.cpp  points.md  swap_values.cpp
c++/language_concepts/boost_concepts/opencv_concepts/apps/: test_visualizer.cpp
c++/language_concepts/examples/: a.out  checkstdoutput.txt  hello_world.cpp
c++/language_concepts/hacker_rank/: day2  day3  sales_by_match  sales_by_match.cpp
c++/language_concepts/hacker_rank/src/: day2.cpp  day3.cpp
c++/language_concepts/src/: arrays.cpp  cv_version.cpp  destructor.cpp  function_types.cpp  functional_example.cpp  functional_example_2.cpp  heap_understanding.cpp  inheritance.cpp  math_functions.cpp  random_number_generator.cpp  seed_random_number_generator.cpp  seed_random_number_generator1.cpp  stl_concepts.cpp  stl_datastructures.cpp  string_split.cpp  string_stream_use.cpp  strings.cpp  temperature_readings.c  test_code.cpp  traits_example.cpp  virtual_funcs.cpp
c++/language_concepts/src/basics/: attribute_parser.cpp  exception_handling.cpp  exception_inheritance.cpp  exception_with_class.cpp  input_output.cpp  string_stream_usage.cpp
c++/language_concepts/src/chapter3/: CMakeLists.txt
c++/language_concepts/src/chapter3_numbers/: string_to_number.cpp
c++/language_concepts/src/iterators/: iterators_1.cpp
c++/language_concepts/src/mathematics/: triangle_area.cpp
c++/language_concepts/src/misc/: typical_issues1.cpp  variable_decalaration.cpp
c++/language_concepts/src/std_library_functions/: bounds_container.cpp  find_function.cpp
c++/language_concepts/src/threads/: thread_callback_styles.cpp
c++/opencv_concepts/: CMakeLists.txt
c++/opencv_concepts/apps/: hello_opencv.cpp
c++/opencv_concepts/src/: Visualizer.cpp  lk_optical_flow.py
libraries/boost_concepts/: CMakeLists.txt
libraries/boost_concepts/eigen_concepts/: CMakeLists.txt
libraries/boost_concepts/opencv_concepts/include/: Visualizer.h
libraries/ceres_examples/: CMakeLists.txt
libraries/ceres_examples/src/: hello_ceres.cpp
libraries/cuda_examples/: CMakeLists.txt  check_cublas.cu  hello_world.cu  thread_id.cu  vector_add.cu  vector_add_profiling.cu
libraries/cuda_examples/src/basics/: matrix_multiplication.cu
libraries/cuda_examples/src/lin_alg/: linear_algebra.cu  linear_algebra_eigen.cpp
libraries/eigen/: CMakeLists.txt
libraries/eigen_examples/: CMakeLists.txt
libraries/eigen_examples/src/: MatrixBaseAddons.h  eigen_addon_example.cpp  eigen_basic_ops.cpp  eigen_with_raw_buffer.cpp  test_eigen_geometry.cpp
libraries/gtsam/: CMakeLists.txt  gtsam_basics.cpp
libraries/gtsam/include/: SFMdata.h
libraries/gtsam/src/: camera_reconstruction.cpp  sfm_example.cpp
libraries/gtsam_examples/: CMakeLists.txt
libraries/gtsam_examples/python/: covariance_plots.py  imu_factor.py  imu_preintegration_example.py  sfm.py
libraries/gtsam_examples/src/: expression_factor_example.cpp  gtsam_version.cpp  key_value.cpp  linear_regression.cpp  sfm_example.cpp
math/: CMakeLists.txt
math/linear_algebra/: CMakeLists.txt  gsl_basic.cpp
math/src/: box_muller_generator.cpp  random_sample_generation.cpp
python/python_concepts/c_extensions/: CMakeLists.txt  pysample.c  sample.c  setup.py
python/python_concepts/c_extensions/ctypes_example/: sample.py
python/python_concepts/pybind/: CMakeLists.txt
python/python_concepts/pybind/src/: hello_pybind.cpp
python/python_concepts/recipe_15.3/: CMakeLists.txt  pysample.c  setup.py  testLibSample.c
python/python_concepts/recipe_15.3/include/: sample.h
ros/src/parameter_server/: CMakeLists.txt  param_server.launch  parameter_server.cpp  params.yaml
(+60 files in other folders)
