cmake_minimum_required(VERSION 3.18)
project(math)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
find_package(CUDA REQUIRED)
set(CMAKE_CUDA_LINKER_LANGUAGE CUDA)
set(CMAKE_CUDA_COMPILER /usr/local/cuda/bin/nvcc)
enable_language(CUDA)
if(${CUDA_FOUND})
message(STATUS "CUDA is found:" ${CUDA_INCLUDE_DIRS})
endif()
add_executable(box_muller_generator ./src/box_muller_generator.cpp)
cuda_add_executable(box_muller_generator_cuda ./src/box_muller_generator.cu)
target_include_directories(box_muller_generator PRIVATE ${CUDA_INCLUDE_DIRS})
target_link_libraries(box_muller_generator PRIVATE ${CUDA_LIBRARIES})
#target_include_directories(box_muller_generator_cuda PRIVATE ${CUDA_INCLUDE_DIRS})
#target_link_libraries(box_muller_generator_cuda PRIVATE ${CUDA_LIBRARIES})
