project(language_concepts)
cmake_minimum_required(VERSION 3.0.0)
set(CMAKE_EXPORT_COMPILE_COMMANDS, ON)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/debug/)
find_package(Boost REQUIRED)
find_package(GTest REQUIRED)
if (GTEST_FOUND)
    message(" Gtest found : " ${GTEST_INCLUDE_DIRS})
endif()

add_subdirectory(${PROJECT_SOURCE_DIR}/src/chapter3_numbers)
add_executable(heap_understanding ./src/memory_management/heap_understanding.cpp)
add_executable(string_stream_use ./src/string_stream_use.cpp)
add_executable(thread_callback_styles ./src/threads/thread_callback_styles.cpp)
add_executable(string_split ./src/string_split.cpp)
target_link_libraries(thread_callback_styles Threads::Threads)
