project(language_concepts)
cmake_minimum_required(VERSION 3.0.0)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/)
find_package(Boost REQUIRED)
find_package(GTest REQUIRED)
if (GTEST_FOUND)
    message(" Gtest found : " ${GTEST_INCLUDE_DIRS})
endif()

add_subdirectory(${PROJECT_SOURCE_DIR}/src/chapter3_numbers)
add_executable(heap_understanding ./src/memory_management/heap_understanding.cpp)
add_executable(string_stream_use ./src/string_stream_use.cpp)
add_executable(thread_callback_styles ./src/threads/thread_callback_styles.cpp)
add_executable(string_split ./src/string_split.cpp)
add_executable(stl_datastructures ./src/stl_datastructures.cpp)
add_executable(lambda_functions ./lambda_functions.cpp)
add_executable(functional_example ./src/functional_example.cpp)
add_executable(seed_random_number_generator
    ./src/seed_random_number_generator.cpp)
add_executable(seed_random_number_generator1
    ./src/seed_random_number_generator1.cpp)
add_executable(function_types
    ./src/function_types.cpp)
add_executable(functional_example_2 ./src/functional_example_2.cpp)
add_executable(traits_example ./src/traits_example.cpp)
add_executable(destructors ./src/destructor.cpp)
add_executable(inheritance ./src/inheritance.cpp)
add_executable(virtual_funcs ./src/virtual_funcs.cpp)
add_executable(arrays ./src/arrays.cpp)
add_executable(strings ./src/strings.cpp)
add_executable(math_functions ./src/math_functions.cpp)
target_link_libraries(thread_callback_styles Threads::Threads)
