cmake_minimum_required(VERSION 3.9)
project(gtsam-examples)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(GTSAM_DIR "/home/jagatpreet/software/gtsam/install_4_1")
find_package(GTSAM REQUIRED PATHS ${GTSAM_DIR})
if(${GTSAM_FOUND})
message(STATUS "GTSAM library found at ${GTSAM_DIR}")
endif()
include_directories(${GTSAM_INCLUDE_DIRS})
get_target_property(gtsam_link_lib gtsam INTERFACE_LINK_LIBRARIES)
message("${gtsam_link_lib}")
include_directories(include)
add_executable(gtsam_basics ./gtsam_basics.cpp)
add_executable(key_value_noisemodel ./src/key_value.cpp)
add_executable(camera_reconstruction ./src/camera_reconstruction.cpp)
add_executable(sfm_example ./src/sfm_example.cpp)
add_executable(linear_regression ./src/linear_regression.cpp)
target_link_libraries(camera_reconstruction gtsam)
target_link_libraries(gtsam_basics gtsam)
target_link_libraries(sfm_example gtsam)
target_link_libraries(key_value_noisemodel gtsam)
target_link_libraries(linear_regression gtsam)
