cmake_minimum_required(VERSION 3.9)
project(gtsam-examples)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(GTSAM_DIR "/home/jagatpreet/software/gtsam/install_4_1/lib/cmake/GTSAM")
set(GTSAM_UNSTALBE_DIR
    "/home/jagatpreet/software/gtsam/install_4_1/lib/cmake/GTSAM_UNSTABLE")
find_package(GTSAM REQUIRED PATHS ${GTSAM_DIR} NO_DEFAULT_PATH)
find_package(GTSAM_UNSTABLE REQUIRED PATHS ${GTSAM_UNSTALBE_DIR} NO_DEFAULT_PATH)
if(${GTSAM_FOUND})
  message(STATUS "GTSAM library found at ${GTSAM_DIR}")
  message(STATUS " GTSAM VERSION : ${GTSAM_VERSION_STRING}")
endif()

find_package(pybind11 REQUIRED)
if(${pybind11_FOUND})
  message(STATUS "pybind11 ${pybind11_VERSION} found")
endif()

include_directories(${GTSAM_INCLUDE_DIRS})
get_target_property(gtsam_link_lib gtsam INTERFACE_LINK_LIBRARIES)
message("${gtsam_link_lib}")
include_directories(include)
add_executable(gtsam_basics ./gtsam_basics.cpp)
add_executable(key_value_noisemodel ./src/key_value.cpp)
add_executable(camera_reconstruction ./src/camera_reconstruction.cpp)
add_executable(sfm_example ./src/sfm_example.cpp)
add_executable(linear_regression ./src/linear_regression.cpp)
add_executable(expression_factor_example ./src/expression_factor_example.cpp)
add_executable(fixed_lag_smoother ./src/fixed_lag_smoother.cpp)

target_link_libraries(camera_reconstruction gtsam)
target_link_libraries(gtsam_basics gtsam)
target_link_libraries(sfm_example gtsam)
target_link_libraries(key_value_noisemodel gtsam)
target_link_libraries(linear_regression gtsam)
target_link_libraries(expression_factor_example gtsam)
target_link_libraries(fixed_lag_smoother gtsam gtsam_unstable)
#pybind_add_module(gtsam_extensions ./src/gtsam_pybind_wrap.cpp)
#target_link_libraries(gtsam_extensions PRIVATE)
