find_package(Python REQUIRED)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
find_package(PythonLibs REQUIRED)
message(STATUS " Libraries - " ${PYTHON_LIBRARIES})
message(STATUS " includes - " ${PYTHON_INCLUDE_DIRS})
if(${Python_FOUND})
  message("Python found ")
endif()
set(Python_INCLUDE_DIRS /usr/include/python3.8)
set(Python_LIBRARIES /usr/lib/python3.8)

add_library(sample SHARED sample.c)
target_include_directories(sample PUBLIC ./include)
add_library(pysample SHARED pysample.c)
message( STATUS "Libraries- " ${Python_LIBRARIES})
message( STATUS "include- " ${Python_INCLUDE_DIRS})
target_link_libraries(pysample ${PYTHON_LIBRARIES})
target_include_directories(pysample PRIVATE ${Python_INCLUDE_DIRS} include)
message(STATUS " Library created ")
